--- a/resturant/frontend/src/app/header/header.component.html
+++ b/resturant/frontend/src/app/header/header.component.html
@@ -2,10 +2,12 @@
     <div class="container">
         <a routerLink="/" class="logo">RAZ</a>
         <nav>
+           
             <ul>
                 <li *ngIf="!isAuth">
                     <a routerLink="/login">Login</a>
                 </li>
+                
                 <li class="menu-container" *ngIf="isAuth">
                     <a routerLink="/dashboard">{{ user?.name }}</a>
                     <div class="menu">
@@ -18,6 +20,10 @@
                     <a routerLink="/cart-page">
                         Cart <span *ngIf="cartQuantity">{{ cartQuantity }}</span>
                     </a>
+                </li>
+
+                <li *ngIf="isAdmin"> 
+                    <a routerLink="/admin-page">Adminstration</a>
                 </li>
             </ul>
         </nav>
