--- a/resturant/frontend/src/app/login-page/login-page.component.css
+++ b/resturant/frontend/src/app/login-page/login-page.component.css
@@ -44,4 +44,11 @@ form {
   display: flex;
   justify-content: center;
   align-items: center;
+  color: #007bff;
 }
+
+a{
+  color: #f9f9f9;
+}
+
+
