--- a/resturant/frontend/src/app/not-found/not-found.component.css
+++ b/resturant/frontend/src/app/not-found/not-found.component.css
@@ -10,8 +10,8 @@ div{
 
 a{
   font-size: 1.1rem;
-  background-color: #e72929;
-  color: white;
+  background-color: #007bff;
+  color: #f9f9f9;
   border-radius: 10rem;
   padding: 0.7rem 1rem;
   margin: 1rem;
