--- a/resturant/frontend/src/app/cart-page/cart-page.component.css
+++ b/resturant/frontend/src/app/cart-page/cart-page.component.css
@@ -11,7 +11,7 @@ ul{
   flex-direction: column;
   flex:3 0;
   justify-content: space-evenly;
-  border: 1px solid blue;
+  border: 1px solid #007bff;
   border-radius: 1rem;
   list-style: none;
   margin: 0.5rem;
@@ -23,7 +23,7 @@ ul li{
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
-  border-bottom: 1px solid blue;
+  border-bottom: 1px solid #007bff;
 }
 
 ul li:last-child{
@@ -49,7 +49,7 @@ li select{
   width: 3rem;
   outline: none;
   border: none;
-  border-bottom: 1px solid lightgrey;
+  border-bottom: 1px solid #f9f9f9;
   font-size: 1.1rem;
   font-weight: 100;
 }
@@ -58,7 +58,7 @@ li .remove-button{
   border-radius: 1rem;
   border: none;
   padding: 0.5rem;
-  color: black;
+  color: #007bff;
   opacity: 0.7;
   outline: none;
 }
@@ -75,7 +75,7 @@ li .remove-button:hover{
   align-items: center;
   flex:1 3;
   height: 20rem;
-  border: 1px solid blue;
+  border: 1px solid #007bff;
   border-radius: 1rem;
   padding: 0.5rem;
   margin: 0.5rem;
@@ -97,18 +97,18 @@ li .remove-button:hover{
 
 .foods-count::before{
   content:"Count: ";
-  color: aliceblue;
+  color: #f9f9f9;
 }
 
 .total-price::before{
   content: 'Price: ';
-  color: aliceblue;
+  color: #f9f9f9;
 }
 
 .checkout a{
   padding: 1rem;
-  color: aliceblue;
-  background:#e72929;
+  color: #f9f9f9;
+  background:#007bff;
   display: block;
   width: 99%;
   border-radius: 1rem;
@@ -123,5 +123,5 @@ li .remove-button:hover{
 }
 
 a{
-  color: aliceblue;
+  color: #f9f9f9;
 }
