--- a/resturant/frontend/src/app/checkout-page/checkout-page.component.css
+++ b/resturant/frontend/src/app/checkout-page/checkout-page.component.css
@@ -32,15 +32,15 @@
   }
   
   button{
-    color: white;
-    background-color: #e72929;
+    color: #f9f9f9;
+    background-color: #007bff;
     width: 100%;
     height: 3rem;
     opacity: 0.8;
     font-size: 1.3rem;
     border: none;
     border-radius: 0.5rem;
-    box-shadow: 2px 2px 2px 2px grey;
+    box-shadow: 2px 2px 2px 2px #007bff;
   }
   
   button:hover{
