--- a/resturant/frontend/src/app/default-button/default-button.component.css
+++ b/resturant/frontend/src/app/default-button/default-button.component.css
@@ -1,21 +1,25 @@
-.container{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-  }
-  
-  button{
-    height: 3.5rem;
-    border: none;
-    outline: none;
-    font-weight: 100;
-    border-radius: 0.8rem;
-    width: 100%;
-    margin: 1rem auto;
-    opacity: 0.8;
-  }
-  
-  button:hover{
+.container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+button {
+  height: 3.5rem;
+  border: none;
+  outline: none;
+  font-weight: 100;
+  border-radius: 0.8rem;
+  width: 100%;
+  margin: 1rem auto;
+  opacity: 0.8;
+  background-color: #007bff; /* Default background color */
+  color: white; /* Text color */
+  transition: background-color 0.3s; /* Smooth color transition */
+}
+
+button:hover {
   cursor: pointer;
   opacity: 1;
-  }
+  background-color: #0056b3; /* Background color on hover */
+}
