--- a/resturant/frontend/src/app/food-page/food-page.component.css
+++ b/resturant/frontend/src/app/food-page/food-page.component.css
@@ -25,7 +25,7 @@ img{
   flex-direction: column;
   flex:1 0;
   padding: 2rem;
-  color: aliceblue;
+  color: #f9f9f9;
   margin-left: 1rem;
 }
 
@@ -39,14 +39,7 @@ img{
   font-weight: bold;
 }
 
-.favorite{
-  color: #e72929;
-  font-size: 2.5rem;
-}
 
-.favorite.not{
-  color: grey;
-}
 
 .origins{
   display: flex;
@@ -59,7 +52,7 @@ img{
   font-size: 1.2rem;
   margin: 0.5rem 0.5rem 0.5rem 0;
   border-radius: 2rem;
-  background-color: #2c3e50;
+  background-color: #007bff;
 }
   
 .cook-time{
@@ -75,17 +68,17 @@ img{
 .price{
   font-size: 1.8rem;
   margin: 2rem 2rem 2rem 0;
-  color: #e72929;
+  color: #f9f9f9;
 }
 
 .price::before{
   content: "Price: ";
-  color: aliceblue;
+  color: #007bff;
 }
 
 button{
-  color: aliceblue;
-  background: #e72929;
+  color: #f9f9f9;
+  background: #007bff;
   border: none;
   font-size: 1.2rem;
   padding: 1rem;
