--- a/resturant/frontend/src/app/header/header.component.css
+++ b/resturant/frontend/src/app/header/header.component.css
@@ -1,18 +1,18 @@
 header {
     position: relative;
-    background-color: #2c3e50; /* Dark green background color for the header */
+    background-color: #007bff; /* Dark green background color for the header */
     padding: 0;
-    border-bottom: 1px solid #2c3e50; /* Slightly lighter border color */
-    color: #fff; /* White text color */
+    border-bottom: 1px solid #0056b3; /* Slightly lighter border color */
+    color: #f9f9f9; /* White text color */
 }
 
 a {
-    color: #fff; /* White text color for links */
+    color: #f9f9f9; /* White text color for links */
 }
 
 a:hover {
-    background-color: #2c3e50; /* Slightly darker background on hover */
-    color: #fff; /* White text color on hover */
+    background-color: #0056b3; /* Slightly darker background on hover */
+    color: #f9f9f9; /* White text color on hover */
     cursor: pointer;
     transition: background-color 0.2s; /* Reduce hover transition */
 }
@@ -40,8 +40,8 @@ ul a {
 }
 
 a span {
-    background-color: #e74c3c; /* Red span background color */
-    color: #fff; /* White text color */
+    background-color: #0056b3; 
+    color: #f9f9f9; 
     padding: 0.1rem 0.45rem;
     border-radius: 100rem;
     font-size: 0.9rem;
@@ -54,7 +54,7 @@ a span {
 .menu {
     position: absolute;
     z-index: 1;
-    background-color: #2c3e50; /* Dark blue menu background color */
+    background-color: #007bff; 
     display: none;
 }
 
