--- a/resturant/frontend/src/app/home/home.component.css
+++ b/resturant/frontend/src/app/home/home.component.css
@@ -16,7 +16,7 @@ li a{
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  color: aliceblue;
+  color: #f9f9f9;
   font-size: 1.3rem;
   
 }
@@ -45,13 +45,6 @@ li a img{
   font-size: 1.2rem;
 }
 
-.favorite.not{
-  color: grey;
-}
-
-.stars{
-  margin-bottom: 0.2rem;
-}
 
 .product-item-footer{
   display: flex;
@@ -65,10 +58,10 @@ li a img{
 
 .origins span{
   border-radius: 2rem;
-  background-color: #2c3e50;
+  background-color: #007bff;
   display: inline-block;
   font-size: 0.8rem;
-  color: aliceblue;
+  color: #f9f9f9;
   margin-right: 0.3rem;
   padding: 0 0.5rem;
   margin-top: 0.2rem;
@@ -86,7 +79,7 @@ li a img{
   left: 0.9rem;
   background: #333;
   padding: 0.3rem 100% 0 0;
-  color: aliceblue;
+  color: #f9f9f9;
   margin-top: 0.7rem;
   font-size: 1.5rem;
 }
