--- a/resturant/frontend/src/app/search/search.component.css
+++ b/resturant/frontend/src/app/search/search.component.css
@@ -10,22 +10,23 @@ input{
   border: none;
   height: 3rem;
   width: 20rem;
-  background-color: #f1f1f1;
+  background-color: #f9f9f9;
   padding: 1.2rem;
   font-size: 1.1rem;
   font-weight: 500;
   outline: none;
+  
 }
 
 div button{
-  color: aliceblue;
+  color: #f9f9f9;
   height: 3rem;
   width: 5rem;
   font-size: 1rem;
   border-radius: 0 10rem 10rem 0;
   border: none;
-  background-color: #2c3e50;
-  color: white;
+  background-color: #007bff;
+  color: #f9f9f9;
   opacity: 0.8;
   outline: none;
 }
