--- a/resturant/frontend/src/app/tags/tags.component.css
+++ b/resturant/frontend/src/app/tags/tags.component.css
@@ -5,10 +5,13 @@ div{
 }
 
 div a{
-  background-color: aliceblue;
+  background-color: #f9f9f9;
   padding: 0.3rem 1rem;
   margin: 0.2rem 0.15rem;
   border-radius: 10rem;   
   font-weight: 600;
-  color: blue;
+  color: #007bff;
+  
 }
+
+
