--- a/resturant/frontend/src/app/text-input/text-input.component.css
+++ b/resturant/frontend/src/app/text-input/text-input.component.css
@@ -2,15 +2,15 @@ input {
     width: 100%;
     height: 100%;
     border: none;
-    border-bottom: 0 solid grey;
+    border-bottom: 0 solid #f9f9f9;
     transition: border-bottom 0.15s ease-out;
-    background-color: white;
+    background-color: #f9f9f9;
     font-size: 1.1rem;
     outline: none;
   }
   
   input::placeholder{
-    color: #dfdfdf;
+    color: #0056b3;
     font-size: 0.95rem;
   }
   
