--- a/resturant/frontend/src/app/title/title.component.css
+++ b/resturant/frontend/src/app/title/title.component.css
@@ -1,3 +1,9 @@
-h1{
-    color: aliceblue;
+h1 {
+    color: #007bff;
+    text-align: center;
+    font-size: 3em; 
+    margin-top: 20px; 
+    margin-bottom: 20px; 
+    font-weight: bold; 
+    
 }
