adding food tag

--- a/resturant/frontend/src/app/add-food/add-food.component.html
+++ b/resturant/frontend/src/app/add-food/add-food.component.html
@@ -7,6 +7,8 @@
     <input type="number" id="price" formControlName="price" placeholder="Enter price">
     <label for="cookTime">Cook Time (minutes):</label>
     <input type="text" id="cookTime" formControlName="cookTime" placeholder="Enter cook time">
+    <label for="tags">Food tag:</label>
+    <input type="text" id="tags" formControlName="tags" placeholder="Enter the tag">
     <button type="submit">Add Food</button>
   </form>
 </div>
